# QtHub

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  copy-dll-debug.bat  copy-dll-release.bat  copy-so-debug.sh  copy-so-release.sh
.github/workflows/: macos.yml  ubuntu.yml  windows-mingw.yml  windows.yml
html/: loading.css  markdown.css  markdown_dark.css
src/: App.qml  ApplicationStarter.h  CMakeLists.txt  QtHub.rc  main.cpp
src/application/: CMakeLists.txt
src/application/assembler/: Assembler.cpp  Assembler.h
src/application/di/: ApplicationInjector.h  ServiceInjector.h
src/application/service/: BaseService.cpp  BaseService.h  IssuesService.cpp  IssuesService.h  RepositoriesService.cpp  RepositoriesService.h  UserService.cpp  UserService.h
src/application/vo/: FeedbackListVo.cpp  FeedbackListVo.h  FeedbackVo.cpp  FeedbackVo.h  RepositoriesListVo.cpp  RepositoriesListVo.h  RepositoriesVo.cpp  RepositoriesVo.h
src/controller/: BaseController.cpp  BaseController.h  CMakeLists.txt  FeedbackController.cpp  FeedbackController.h  LoginController.cpp  LoginController.h  MainController.cpp  MainController.h  ProfileController.cpp  ProfileController.h  RepositoriesController.cpp  RepositoriesController.h  SearchController.cpp  SearchController.h
src/domain/: CMakeLists.txt
src/domain/entity/: History.h  Issues.h  Pager.h  Repositories.h  User.h
src/domain/exception/: BizException.cpp  BizException.h
src/domain/repository/: LocalRepository.cpp  LocalRepository.h  Repository.cpp  Repository.h
src/infrastructure/: CMakeLists.txt
src/infrastructure/config/: AppConfig.cpp  AppConfig.h
src/infrastructure/converter/: Converter.cpp  Converter.h
src/infrastructure/db/: DB.cpp  DB.h  HistoryTable.cpp  HistoryTable.h  QtHubDataBase.cpp  QtHubDataBase.h
src/infrastructure/di/: ApplicationInjector.h  RepositoryInjector.h  ServiceInjector.h
src/infrastructure/dto/: IssuesDto.h  LicenseDto.h  OwnerDto.h  PageDto.h  ReactionsDto.h  ReadmeDto.h  RepositoriesDto.h  RepositoryDto.h  SearchRepositoriesDto.h  TokenDto.h  UserDto.h  UserStatusDto.h
src/infrastructure/helper/: CommonHelper.cpp  SettingsHelper.cpp  SettingsHelper.h  UiHelper.cpp  UiHelper.h  UserHelper.cpp  UserHelper.h
src/infrastructure/http/: HttpClient.cpp  HttpClient.h
src/infrastructure/log/: Logger.cpp  Logger.h
src/infrastructure/po/: HistoryPo.h
src/infrastructure/repository/impl/: LocalRepositoryImpl.cpp  LocalRepositoryImpl.h  RepositoryImpl.cpp  RepositoryImpl.h
src/infrastructure/tool/: CommonTool.cpp  CommonTool.h  CountDownLatch.cpp  CountDownLatch.h  MainThread.cpp  MainThread.h  RxHttp.h  RxTool.cpp  RxTool.h  concurrentqueue.h
src/login/: LoginController.cpp  LoginController.h  LoginWindow.qml
src/main/: MainController.h  MainWindow.qml
src/rc/: version.rc
src/ui/: CMakeLists.txt  JsonFormartHelper.cpp  JsonFormartHelper.h  MainWindow.cpp  MainWindow.h  MyNetworkAccessManagerFactory.cpp  MyNetworkAccessManagerFactory.h  PixmapImage.cpp  PixmapImage.h  ScreensHotHelper.cpp  ScreensHotHelper.h  Settings.cpp  TextDocument.cpp  TextDocument.h
src/ui/component/: CustomWindow.qml
src/ui/page/: ExplorePage.qml  HomePage.qml  NotificationsPage.qml  ProfilePage.qml
src/ui/res/: qml.qrc
src/ui/res/component/: CusAvatar.qml  CusButton.qml  CusImageButton.qml  CusLineEditArea.qml  CusLoading.qml  CusMenu.qml  CusMenuBar.qml  CusMenuBarItem.qml  CusMenuItem.qml  CusMenuSelectItem.qml  CusMenuSeparator.qml  CusPage.qml  CusRadioButton.qml  CusSliderBar.qml  CusText.qml  CusTextArea.qml  CusTextDialog.qml  CusTextEdit.qml  CusToolBar.qml  CusToolButton.qml  CusToolTip.qml  CusWindow.qml  CusWindowDialog.qml  IconTextField.qml  ItemLayout.qml  PageButton.qml  Pagination.qml  Pagination2.qml  PrimaryButton.qml  PrimaryTextField.qml  ScreenShotArea.qml  Shadow.qml  TextIcon.qml  TextSelection.qml  Toast.qml  TreeList.qml  TreeList2.qml  WindowResize.qml
src/ui/res/global/: global.js
src/ui/res/js/: FileSize.js  Router.js
src/ui/res/layout/: App.qml  ColorPickerWindow.qml  Login.qml  MainHome.qml  MainSearch.qml  MainTool.qml  MainWindow.qml  Settings.qml  WindowAbout.qml  WindowColorPicker.qml  WindowFeedback.qml  WindowJsonFormat.qml  WindowLogin.qml  WindowMain.qml  WindowRepositories.qml  WindowRepositoriesDetail.qml  WindowSearch.qml  WindowSettings.qml  WindowWebView.qml  main.qml
src/ui/res/storage/: AppStorage.qml  ModelData.qml  Router.qml  Theme.qml  ToolData.qml  ToolModel.qml  qmldir
src/ui/res/third/colorpicker/: Checkerboard.qml  Checkerboard.qml.rej  ColorPicker.qml  ColorSlider.qml  NumberBox.qml  Palette.qml  Palettes.qml  PanelBorder.qml  SBPicker.qml
src/ui/res/view/: Rectangle.qml
src/ui/window/: LoginWindow.qml  MainWindow.qml  SettingsWindow.qml
third/linux/frameless/debug/: libFramelessHelper.so.1.0.0
third/linux/frameless/release/: libFramelessHelper.so.1  libFramelessHelper.so.1.0.0
third/linux/glog/debug/: libglogd.so.0.6.0  libglogd.so.1
third/linux/glog/include/glog/: logging.h
third/linux/glog/release/: libglog.so.0.6.0
third/win32/frameless/debug/: FramelessHelper.lib
third/win32/glog/debug/: glogd.lib
third/win32/glog/release/: glog.lib
third/win32/qolm/debug/: QOlm.lib
third/win32/qolm/include/QOlm/: QOlm.hpp
third/win32/qolm/release/: QOlm.lib
third/win64/frameless/debug/: FramelessHelper.lib  FramelessHelperCored.lib  FramelessHelperQuickd.lib  FramelessHelperWidgetsd.lib
third/win64/frameless/release/: FramelessHelper.lib  FramelessHelperCore.lib  FramelessHelperQuick.lib  FramelessHelperWidgets.lib
third/win64/glog/debug/: glogd.lib
third/win64/glog/include/glog/: logging.h
third/win64/glog/release/: glog.lib
third/win64/nut/debug/: Qt6Nutd.lib
third/win64/nut/include/QtNut/: AbstractFieldPhrase  AbstractSqlGenerator  AbstractTableSet  AbstractTableSetData  AssignmentPhrase  AssignmentPhraseList  BulkInserter  ConditionalPhrase  DatabaseModel  FieldPhrase  QtNut  (+49 more)
third/win64/nut/release/: Qt6Nut.lib
third/win64/qolm/debug/: QOlm.lib
third/win64/qolm/release/: QOlm.lib
(+7 files in other folders)
