cmake_minimum_required(VERSION 3.20)

project(QtHub VERSION 0.1 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)

set(FLUENTUI_BUILD_EXAMPLES OFF)
set(FLUENTUI_BUILD_STATIC_LIB OFF)
set(FLUENTUI_BUILD_FRAMELESSHEPLER ON)
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(FLUENTUI_QML_PLUGIN_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/debug/FluentUI)
else()
    set(FLUENTUI_QML_PLUGIN_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/release/FluentUI)
endif()
set(WITH_GFLAGS OFF)
set(WITH_GTEST OFF)
set(WITH_GMOCK OFF)

add_subdirectory(src)
add_subdirectory(FluentUI)
add_subdirectory(glog)
